cli/hypercode-rs/tui/src/bottom_pane/snapshots/hypercode_tui__bottom_pane__list_selection_view__tests__list_selection_footer_note_wraps.snap
---
source: tui/src/bottom_pane/list_selection_view.rs
assertion_line: 683
expression: "render_lines_with_width(&view, 40)"
---
                                        
  Select Approval Mode                  
                                        
› 1. Read Only (current)  Hypercode can     
                          read files    
                                        
  Note: Use /setup-elevated-sandbox to  
  allow network access.                 
  Press enter to confirm or esc to go ba
